--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@react-hook/window-size": "^3.0.7",
     "antd": "^4.19.2",
     "next": "^12.1.0",
     "react": "^17.0.2",
