--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
+    "react-image-file-resizer": "^0.4.7",
+    "react-is": "^18.0.0",
     "rich-markdown-editor": "^11.21.3",
     "styled-components": "^5.3.5"
   },
   "overrides": {
     "prosemirror-tables": "^1.1.1",
-    "prosemirror-model": "1.16.1" 
+    "prosemirror-model": "1.16.1"
   }
 }
