--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-hook/window-size": "^3.0.7",
     "antd": "^4.19.2",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
