--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "generate-password": "^1.7.0",
     "next": "^12.1.0",
     "react": "^17.0.2",
+    "react-count-to": "^0.12.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-image-file-resizer": "^0.4.7",
